<resources>
    <string name="app_name">FYZ</string>
    <string name="logo">Forever Your Zealot</string>

    <!-- button on a main activity-->
    <string name="tel">Тел. +38(050) 811-63-93</string>
    <string name="payment">На сайте возможна электронная оплата:
        \nПриват24, LiqPay, VISA / MasterCard, QR код
    </string>
    <string name="button">Категории</string>
    <string name="button2">Акции</string>
    <string name="button3">Доставка и оплата</string>
    <string name="button4">Контакты</string>
    <string name="button5">О нас</string>

    <!-- array options -->
    <string-array name="options">
        <item>Категории</item>
        <item>Акции</item>
        <item>Доставка и оплата</item>
        <item>Контакты</item>
        <item>О нас</item>
    </string-array>

    <!-- array categories -->
    <string-array name="categories">
        <item>Бытовая химия</item>
        <item>Кухонные принадлежности</item>
        <item>Посуда</item>
        <item>Товары для детей</item>
        <item>Товары для дома</item>
        <item>Хозяйственный инвентарь</item>
        <item>Хранение и организация простарнства</item>
    </string-array>

    <!-- activity Promotions -->
    <string name="namePromotions">Товары со скидкой</string>
    <string name="descriptionPromotions">В данный момент товары со скидкой недоступны</string>

    <!-- activity ShippingPayment -->
    <string name="nameShippingPayment">Доставка и оплата</string>
    <string name="descriptionShippingPayment">Условия доставки:
        \n
        \nВсе отправки осуществляются почтовой службой "Новая Почта". Срок доставки заказа в 
        среднем занимает 1-2 дня.
        \n
        \nДоставка осуществляется в указанное Вами отделение "Новой Почты" в Вашем городе. 
        Также возможна адресная доставка товара на дом (при этом стоимость доставки рассчитывается 
        согласно тарифам почтовой службы).
        \n
        \nЗаказывая доставку товара сторонними курьерскими службами - при получении обязательно 
        проверяйте наличие всего товара в заказе, а так же его внешний вид, целостность и 
        работоспособность.
        \n
        \nОбращаем внимание на то, что заказ товара сделанный до 14.00 текущего рабочего дня, 
        будет обработан и отправлен в этот же день. Все заказы принятые после 14.00 отправляются 
        на следующий день (кроме воскресенья).
        \n
        \nСтоимость доставки зависит от следующих факторов:
        \n- вариант оплаты
        \n- вес посылки
        \n- габариты посылки
        \n- город доставки
        \n
        \nРассчитать стоимость доставки можно на сайте "Новой Почты".
        \n
        \nВарианты оплаты:
        \n
        \n1. Наложенный платеж:
        \n- оплата заказа непосредственно при его получении
        \n- возможность вскрытия посылки и осмотра товара в отделении "Новой Почты" до оплаты в 
        присутствии представителя "Новой почты"
        \n- отслеживание посылки по номеру товарно-транспортной накладной (ТТН) на сайте 
        "Новой Почты". Также вы можете оформить заказ по предоплате на карту "Приват Банк". 
        В этом случае Вы не платите за наложенный платеж
        \n
        \n2. 100% предоплата на карту "Приват Банка":
        \n- экономия 20 гривен + 2% от общей суммы обратного перевода денежных средств
        \n
        \nРеквизиты для оплаты:
        \n- Карта АО "ПРИВАТБАНК" 4246 0010 3001 6749 
        \n
        \nЕДРПОУ 2865209792
        \n
        \nUA533375460000026002055050898.
        \n
        \nЧП Снитко Дмитрий Николаевич
    </string>

    <!-- activity Contacts -->
    <string name="nameContacts">Связаться с нами</string>
    <string name="descriptionContacts">Телефон +38(050) 811-63-93
        \n
        \nВремя работы
        \nПн - Пт с 9.00 по 18.00
        \nСб с 10.00 по 16.00
    </string>

    <!-- activity about us -->
    <string name="nameAboutUs">О нас</string>
    <string name="descriptionAboutUs">В интернет-магазине "FYZ" мы собрали широкий ассортимент самых
        популярных и трендовых товаров. Это самые нужные и необходимые товары для дома, семьи, офиса.
        В перечне предлагаемой продукции вы найдете только те товары, которые заслужили огромную
        популярность - хиты продаж! К тому же список продукции настолько обширен, что захватывает
        практически каждый аспект повседневной жизни. С нашими товарами вы получите больше
        свободного времени, которое позволит вам провести его с пользой в кругу своих близких и друзей.
        \n
        \nНаш интернет-магазин предлагает к выбору самые оригинальные и удивительные подарки и
        сувениры, заслужившие внимание во всём мире. И конечно же, вы можете просто приобрести
        необходимую вещь для себя и вашего дома. У нас вы обязательно найдете самый трендовый товар
        для любых ваших целей!
        \n
        \nВся продукция представлена по лучшим ценам в Украине. Мы сотрудничаем напрямую с
        производителями товаров, что позволяет нам держать стоимость на минимальном уровне. При
        этом мы гарантируем высокое качество нашей продукции. Убедитесь в этом сами! Покупая в
        нашем интернет-магазине, вы экономите время и деньги и получаете лучший товар из всех
        существующих аналогов на рынке.
        \n
        \nМы предоставим вам выбранный товар в кратчайшие сроки. Все наши усилия направленны на то,
        чтобы покупка в нашем интернет-магазине была для вас приятной во всех отношениях. Мы
        отбираем только лучшие товары, даем гарантию и делаем доставку по всей Украине!
        \n
        \nЕсли у вас остались вопросы - мы с радостью проконсультируем вас, подскажем в выборе и
        дадим советы по использованию товаров.
    </string>


</resources>